@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2005/10/10 16:46:02 joerg Exp $
+# $NetBSD: Makefile,v 1.10 2005/10/10 23:29:00 joerg Exp $
 
 PKGNAME=	postgresql80-client-${BASE_VERS}
-PKGREVISION=	3
 COMMENT=	PostgreSQL database client programs
 
 .include "../../databases/postgresql80/Makefile.common"
@@ -16,7 +15,7 @@ CONFLICTS+=	postgresql80-lib-*
 CONFLICTS+=	postgresql80-docs-*
 
 # The thread-safety test in ${WRSRC}/src/tools/thread does not pass on
-# NetBSD or DragonFly.
+# NetBSD (missing strerror_r) or DragonFly.
 #
 .if ${OPSYS} == "NetBSD" || ${OPSYS} == "DragonFly"
 PGSQL_THREAD_SAFETY?=	no
