@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.6 2005/08/21 01:21:23 jlam Exp $
+@comment $NetBSD: PLIST,v 1.7 2005/10/10 16:46:02 joerg Exp $
 ${PG_SUBPREFIX}bin/clusterdb
 ${PG_SUBPREFIX}bin/createdb
 ${PG_SUBPREFIX}bin/createlang
@@ -556,6 +556,7 @@ ${PG_SUBPREFIX}share/doc/postgresql/FAQ_QNX4
 ${PG_SUBPREFIX}share/doc/postgresql/FAQ_SCO
 ${PG_SUBPREFIX}share/doc/postgresql/FAQ_Solaris
 ${PG_SUBPREFIX}share/doc/postgresql/FAQ_brazilian
+${PG_SUBPREFIX}share/doc/postgresql/FAQ_chinese
 ${PG_SUBPREFIX}share/doc/postgresql/FAQ_czech
 ${PG_SUBPREFIX}share/doc/postgresql/FAQ_farsi
 ${PG_SUBPREFIX}share/doc/postgresql/FAQ_french
@@ -949,6 +950,7 @@ ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-3-7.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-3-8.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-3-9.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-3-10.html
+${PG_SUBPREFIX}share/doc/postgresql/html/release-7-3-11.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-3.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-1.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-2.html
@@ -958,9 +960,11 @@ ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-5.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-6.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-7.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-8.html
+${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4-9.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-7-4.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-8-0-1.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-8-0-2.html
+${PG_SUBPREFIX}share/doc/postgresql/html/release-8-0-3.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release-8-0.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/release.html
 ${PG_SUBPREFIX}share/doc/postgresql/html/resources.html
