@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2005/07/02 14:31:11 rillig Exp $
+# $NetBSD: Makefile,v 1.5 2005/08/05 19:43:44 jlam Exp $
 
 PKGNAME=	postgresql80-${BASE_VERS}
-PKGREVISION=	1
 COMMENT=	Robust, next generation, object-relational DBMS
 
 DEPENDS+=	postgresql80-client>=${BASE_VERS}nb2:../../databases/postgresql80-client
